After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 770643 - gst_discoverer_info_get_misc doesn't work
gst_discoverer_info_get_misc doesn't work
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.8.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-08-31 12:49 UTC by Jonathan Matthew
Modified: 2016-09-04 16:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
store missing-plugins structure in current_info->misc (1.12 KB, patch)
2016-09-03 01:59 UTC, Jonathan Matthew
committed Details | Review

Description Jonathan Matthew 2016-08-31 12:49:56 UTC
gst_discoverer_info_get_misc will always return NULL since commit 622007e:

diff --git a/gst-libs/gst/pbutils/gstdiscoverer.c b/gst-libs/gst/pbutils/gstdiscoverer.c
index ab5683d..337cd32 100644
--- a/gst-libs/gst/pbutils/gstdiscoverer.c
+++ b/gst-libs/gst/pbutils/gstdiscoverer.c
@@ -1383,9 +1383,13 @@ handle_message (GstDiscoverer * dc, GstMessage * msg)
         GST_DEBUG_OBJECT (GST_MESSAGE_SRC (msg),
             "Setting result to MISSING_PLUGINS");
         dc->priv->current_info->result = GST_DISCOVERER_MISSING_PLUGINS;
+        /* FIXME 2.0 Remove completely the ->misc
+         * Keep the old behaviour for now.
+         */
         if (dc->priv->current_info->misc)
           gst_structure_free (dc->priv->current_info->misc);
-        dc->priv->current_info->misc = gst_structure_copy (structure);
+        g_ptr_array_add (dc->priv->current_info->missing_elements_details,
+            gst_missing_plugin_message_get_installer_detail (msg));
       } else if (sttype == _STREAM_TOPOLOGY_QUARK) {
         if (dc->priv->current_topology)
           gst_structure_free (dc->priv->current_topology);


despite this comment this does not keep the old behaviour.
Comment 1 Sebastian Dröge (slomo) 2016-08-31 13:19:59 UTC
Do you want to provide a patch?
Comment 2 Jonathan Matthew 2016-09-03 01:59:24 UTC
Created attachment 334698 [details] [review]
store missing-plugins structure in current_info->misc
Comment 3 Tim-Philipp Müller 2016-09-04 16:02:30 UTC
Thanks, pushed to master and 1.8:

commit 7b8aa8cf7ed20e28902ee66d03ce6e14596a76b4
Author: Jonathan Matthew <jonathan@d14n.org>
Date:   Sat Sep 3 11:57:22 2016 +1000

    pbutils: store missing-plugin structure in current_info->misc again
    
    This allows gst_discoverer_info_get_misc to work again, until it
    finally gets removed.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=770643